final final update

--- a/views/checkinghealth.ejs
+++ b/views/checkinghealth.ejs
@@ -34,12 +34,12 @@
                         </div>   
                         <label for="showHeartRate" class="form-label">Heart Rate (bpm):</label>
                         <div class="input-group mb-3">
-                            <input type="text" id="showHeartRate" name="heartRate" class="form-control bg-light fs-6" placeholder="00" required disabled>
+                            <input type="text" id="showHeartRate" name="heartRate" class="form-control bg-light fs-6" placeholder="00" required>
                             <div class="invalid-feedback">Please enter your heart rate.</div>   
                         </div>
                         <label for="showSP02" class="form-label">Oxygen saturation (SpO2):</label>
                         <div class="input-group mb-3">
-                            <input type="text" id="showSPO2" name="SpO2" class="form-control bg-light fs-6" placeholder="00" required disabled>
+                            <input type="text" id="showSPO2" name="SpO2" class="form-control bg-light fs-6" placeholder="00" required>
                             <div class="invalid-feedback">Please enter your oxygen saturation.</div>
                         </div>
                         <div class="input-group">
