--- a/views/register.ejs
+++ b/views/register.ejs
@@ -98,7 +98,7 @@
                         </div>
                         <label class="form-label">Contact Number:</label>
                         <div class="input-group mb-2">
-                            <input type="text" class="form-control bg-light fs-6" name="contactNum" id="phone" required pattern="[0-9]{11}" placeholder="Enter Phone Number" value="<%= formData.contactNum || '' %>"/>
+                            <input type="number" class="form-control bg-light fs-6" name="contactNum" id="phone" required pattern="[0-9]{11}" placeholder="Enter Phone Number" value="<%= formData.contactNum || '' %>"/>
                             <div class="invalid-feedback">Please enter a valid 11-digit phone number.</div>
                         </div>
                         <label class="form-label">Email address:</label>
