--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,142 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Login | Health Monitoring System</title>
 </head>
-<style>
-    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
-
-    body {
-        font-family: 'Poppins', sans-serif;
-        padding: 20px;
-        background-size: cover;
-    }
-
-    .navbar {
-        border-radius: 10px;
-    }
-
-    .container {
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-
-    .box-area {
-        width: 900px;
-        margin-top: 5px;
-    }
-
-    .left-box img {
-        width: 85%;
-        display: block;
-        margin: 0 auto;
-    }
-
-    .left-box h2 {
-        font-size: 30px;
-        margin-top: 10px;
-        text-align: center;
-    }
-
-    .right-box {
-        padding: 40px 30px 40px 40px;
-    }
-
-    .right-box p {
-        margin-bottom: 0%;
-    }
-
-    .right-box label {
-        font-size: 16px;
-    }
-
-    .form-control {
-        font-size: 16px; 
-    }
-
-    .rounded-4 {
-        border-radius: 15px; 
-    }
-
-    .card-img-top {
-        width: 85%;
-        margin: auto;
-        display: block;
-    }
-
-    footer {
-        border-radius: 15px; 
-        background-color: #f8f9fa;
-        padding: 20px 0;
-        text-align: center;
-        margin-top: 20px;
-        font-size: 14px;
-    }
-
-    .separator {
-        display: flex;
-        align-items: center;
-        text-align: center;
-        margin: 20px 0;
-    }
-
-    .separator::before, .separator::after {
-        content: '';
-        flex: 1;
-        border-bottom: 1.5px solid #000;
-    }
-
-    .separator:not(:empty)::before {
-        margin-right: .20em;
-    }
-
-    .separator:not(:empty)::after {
-        margin-left: .20em;
-    }
-
-    @media only screen and (max-width: 768px) {
-        .left-box {
-            height: 100px;
-            overflow: hidden;
-            text-align: center;
-        }
-
-        .left-box img {
-            width: 55%;
-        }
-
-        .right-box {
-            padding: 20px;
-        }
-
-        .right-box label {
-            font-size: 14px;
-        }
-
-        .form-control {
-            font-size: 14px;
-        }
-    }
-</style>
 <body>
     <div class="container d-flex justify-content-center align-items-center min-vh-150">
         <div class="row border rounded-4 p-3 bg-white shadow box-area">
-            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #000000;"></div> 
+            <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box">
+                <img src="/images/background.png" class="img-fluid">
+            </div>
             <div class="col-md-6 right-box">
                 <div class="row align-items-center">
                     <div class="header-text mb-4 text-center">
+                        <% if (error) { %>
+                            <div class="alert alert-danger"><%= error %></div>
+                        <% } %>
                         <% if (!email) { %>
                             <h2>Sign in to HMS</h2>
                             <p>Access your health data and monitor your progress. Please enter your email to continue.</p>
                         <% } else { %>
                             <h2>Enter your password</h2>
-                            <p>Please enter your password for <strong><%= email %></strong> to continue.</p>
+                            <p>Please enter your password for <strong><%= email %></strong> (<a href="/edit-email">edit</a>) to continue.</p>
                         <% } %>
-                    </div>
+                    </div>                    
                     <form id="authForm" action="/login" method="post" novalidate>
                         <% if (!email) { %>
+                            <label for="email" class="form-label">Email address</label>
                             <div class="input-group mb-3">
-                                <input type="email" id="email" name="email" class="form-control form-control-lg bg-light fs-6" placeholder="Email address" required>
+                                <input type="email" id="email" name="email" class="form-control form-control-lg bg-light fs-6" required>
                                 <div class="invalid-feedback">Please enter your email address.</div>
                             </div>
                         <% } else { %>
@@ -150,16 +42,22 @@
                             </div>
                         <% } %>
                         <div class="input-group">
-                            <button type="submit" name="continue" class="btn btn-lg w-100 fs-6" style="background-color: #000000; color: #ececec;">Continue</button>
+                            <button type="submit" name="continue" class="btn btn-lg w-100 fs-6" style="background-color: #2d3139; color: #ececec;">Continue</button>
                         </div>
                     </form>
                     <% if (!email) { %>
-                        <div class="separator mb-3"></div>
-                        <button class="btn btn-lg btn-light w-100 fs-6 mb-2"><img src="https://www.vectorlogo.zone/logos/google/google-icon.svg" style="width:20px" class="me-2"><small>Continue with Google</small></button>
-                        <button class="btn btn-lg btn-light w-100 fs-6"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" style="width:20px" class="me-2"><small>Continue with Facebook</small></button>
+                        <div class="separator mb-3">OR</div>
+                        <a href="/auth/google" class="btn btn-lg btn-light w-100 fs-6 mb-2">
+                            <img src="https://www.vectorlogo.zone/logos/google/google-icon.svg" style="width:20px" class="me-2">
+                            <small>Continue with Google</small>
+                        </a>
+                        <a href="/auth/facebook" class="btn btn-lg btn-light w-100 fs-6 mb-2">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/2023_Facebook_icon.svg" style="width:20px" class="me-2">
+                            <small>Continue with Facebook</small>
+                        </a>
                     <% } %>
                     <div class="text-center mt-3">
-                        <small>Don't have an account? <a href="#">Sign Up</a></small>
+                        <small>Don't have an account? <a href="/register">Sign Up</a></small>
                     </div>
                 </div>
             </div> 
